Navbar, blur, buttons, popup div
NOT 100% functional! I just need it so I can work on my laptop.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <title>DelOkønomi</title>
 </head>
 <body>
+    <div class="popup-div">
+        <h1>HAHAHAHAHAHHA INDSTILLINGER LMAOOOO HAHAHA</h1>
+    </div>
+    <div class="blur">
+
+
+
+    <div class="nav">
+        <button class="nav-btn">Månedligt forbrug</button>
+        <button class="nav-btn">Settings</button>
+        <button class="nav-btn">Feedback</button>
+        <button class="nav-btn">Settings</button>
+        <button class="nav-btn">Log ud</button>
+    </div>
     <div class="calendar-grid">
         <div class="time-header"></div>
         <div class="time">01:00</div>
@@ -220,6 +234,8 @@
         <div class="day-header">Søndag
             <div>14/04</div>
         </div>
+    </div>
+    <button id="btn">Test</button>
     </div>
 </body>
 </html>
