--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Page and Button Switching Example</title>
+    <title>Deløkonomi</title>
     <link rel="stylesheet" href="mainstyle.css">
     <script defer src="mainscript.js"></script>
 </head>
@@ -24,6 +24,7 @@
             <button class="nav-btn" id="logout-btn">Log ud</button>
         </div>
         <div class="calendar-grid" id="cal-start"></div>
+        <button class="nav-btn" style="width: 650px; height: 50px; margin-top: 10px; margin-left: 20px;">Tilføj tidspunkter</button>
     </div>
 </body>
 </html>
