--- a/main.html
+++ b/main.html
@@ -20,6 +20,7 @@
             <button class="nav-btn" id="budget-btn">Månedligt forbrug</button>
             <button class="nav-btn" id="settings-btn">Settings</button>
             <button class="nav-btn" id="feedback-btn">Feedback</button>
+            hbhb
             <button class="nav-btn" id="support-btn">Support</button>
             <button class="nav-btn" id="logout-btn">Log ud</button>
         </div>
