--- a/main.html
+++ b/main.html
@@ -10,7 +10,10 @@
         <button class="exit-popup">X</button>
         <div class="display-none" id="budget-div">Budget div</div>
         <div class="display-none" id="settings-div">Settings div</div>
-        <div class="display-none" id="feedback-div">Feedback div</div>
+        <div class="display-none" id="feedback-div">
+            Har du problemer?
+            <button id="contact-btn" class="nav-btn">Kontakt os her</button>
+        </div>
         <div class="display-none" id="support-div">Support div</div>
     </div>
     <!-- <div class="exit-popup" id="hidden-exit"></div> -->
