--- a/main.html
+++ b/main.html
@@ -16,9 +16,11 @@
         </div>
         <div class="display-none" id="support-div">Support div</div>
     </div>
+
     <!-- <div class="exit-popup" id="hidden-exit"></div> -->
     <div class="can-blur">
         <div class="nav">
+            
             <img src="logo.png">
             <button class="nav-btn" id="budget-btn">Månedligt forbrug</button>
             <button class="nav-btn" id="settings-btn">Settings</button>
@@ -26,8 +28,11 @@
             <button class="nav-btn" id="support-btn">Support</button>
             <button class="nav-btn" id="logout-btn">Log ud</button>
         </div>
+        <button id="prev-week">◄</button>
+        <button id="next-week">►</button>
         <div class="calendar-grid" id="cal-start"></div>
         <button class="nav-btn" style="width: 650px; height: 50px; margin-top: 10px; margin-left: 20px;">Tilføj tidspunkter</button>
     </div>
+    
 </body>
 </html>
