--- a/kontaktos.html
+++ b/kontaktos.html
@@ -24,6 +24,10 @@
             background-color: red;
             color: white;
         }
+
+        #button {
+            background-color: red;
+        }
     </style>
 </head>
 <body>
