--- a/main.html
+++ b/main.html
@@ -17,10 +17,7 @@
 <div class="display-none" id="settings-div">Settings div</div>
 
 <button class="exit-popup visible-exit" data-popup="feedback-div">X</button>
-<div class="display-none" id="feedback-div">
-    Har du problemer?
-    <button id="contact-btn" class="nav-btn">Kontakt os her</button>
-</div>
+<div class="display-none" id="feedback-div">Feedbacks div</div>
 
 <button class="exit-popup visible-exit" data-popup="support-div">X</button>
 <div class="display-none" id="support-div">Support div</div>
