Removed bloat code + login switch to pass with enter
Also added new files for admin that we'll be using soon..

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Velkommen til Jensens boligselvskab</h1>
             <p>Log ind eller <a class="dark-blue" href="resetPassword.html">glemt kodeord</a></p>
             <div id="textboxContainer">
-                <input type="text" id="textbox1" placeholder="Brugernavn">
+                <input type="text" id="textbox1" placeholder="Brugernavn" autofocus>
                 <div></div>
                 <input type="text" id="textbox2" placeholder="Kodeord" style="margin-top: 10px;">
             </div>
