User changes between weeks are now saved and added locked cells by other users
Also needed to add an algorithm to convert a nodeList to coordinates on our grid. Also deleted more bloat code + reorganized it a bit.. I think it might never be organized properly..

--- a/main.html
+++ b/main.html
@@ -87,10 +87,10 @@
             <button class="nav-btn" id="support-btn">Support</button>
             <button class="nav-btn" id="logout-btn">Log ud</button>
         </div>
-        <button id="prev-week">◄</button>
-        <button id="next-week">►</button>
         <div class="calendar-grid" id="cal-start"></div>
-        <button class="nav-btn" style="width: 650px; height: 50px; margin-top: 10px; margin-left: 20px;">Tilføj tidspunkter</button>
+        <button id="prev-week" class="arrow">◄</button>
+        <button id="next-week" class="arrow">►</button>
+        <button id="add-times" class="nav-btn">Tilføj tidspunkter</button>
     </div>
 </body>
 </html>
