Buttons for different shared resources and functionality

--- a/main.html
+++ b/main.html
@@ -91,6 +91,16 @@
         <button id="prev-week" class="arrow">◄</button>
         <button id="next-week" class="arrow">►</button>
         <button id="add-times" class="nav-btn">Tilføj tidspunkter</button>
+        <div class="shared-items-container">
+            <button class="shared-items-btn" id="washing-machine-btn">Vaskerum</button>
+            <div class="shared-items-selected"></div>
+            <button class="shared-items-btn" id="party-room-btn">Festlokale</button>
+            <div class="shared-items-selected"></div>
+            <button class="shared-items-btn" id="drill-btn">Boremaskine</button>
+            <div class="shared-items-selected"></div>
+            <button class="shared-items-btn" id="vacumn-cleaner-btn">Støvsuger</button>
+            <div class="shared-items-selected"></div>
+        </div>
     </div>
 </body>
 </html>
