--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <h1>Velkommen til Jensens boligselvskab</h1>
             <p>Log ind eller <a class="dark-blue" href="resetPassword.html">glemt kodeord</a></p>
             <div id="textboxContainer">
-                <input type="text" id="textbox1" placeholder="Brugernavn" autofocus>
+                <input type="text" id="username" placeholder="Brugernavn" autofocus>
                 <div></div>
-                <input type="text" id="textbox2" placeholder="Kodeord" style="margin-top: 10px;">
+                <input type="text" id="password" placeholder="Kodeord" style="margin-top: 10px;">
             </div>
             <button id="loginBtn" class="navBtn" style="margin-top: 10px;">Log ind</button>
         </div>
