working on order btn

--- a/main.html
+++ b/main.html
@@ -75,7 +75,9 @@
             </div>
         </div>
         <div class="display-none" id="order-div">
-            <h1>im adding times</h1>
+            <h1 >im adding times</h1>
+            <div id="display-ordered-times"></div>
+            <button class="confirm-btn" id="confirm-btn-id">Bekræft tider</button>
         </div>
     </div>
     <div class="exit-popup invisible-exit"></div> 
