--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div class="hidden-popup-div">
-        <button class="exit-popup">X</button>
-        <button class="exit-popup visible-exit" data-popup="budget-div">X</button>
+        <button class="exit-popup"></button>
+        <button class="exit-popup visible-exit" data-popup="budget-div"></button>
         <div class="display-none" id="budget-div">
             <h1 class="content">Saldo</h1>
             <h3 class="content">Her får du overblik over dit forbrug</h3>
@@ -35,10 +35,10 @@
                 <textarea rows="4" cols="50" class="content"></textarea>
             </div>
         </div>
-        <button class="exit-popup visible-exit" data-popup="settings-div">X</button>
+        <button class="exit-popup visible-exit" data-popup="settings-div"></button>
         <div class="display-none" id="settings-div">Settings div</div>
     
-        <button class="exit-popup visible-exit" data-popup="feedback-div">X</button>
+        <button class="exit-popup visible-exit" data-popup="feedback-div"></button>
         <div class="display-none" id="feedback-div">
             <h1 class="content">Feedback</h1> 
             <p class="content">Skriv din feedback nedenunder</p>
@@ -62,7 +62,7 @@
             </div>
         </div>
 
-        <button class="exit-popup visible-exit" data-popup="support-div">X</button>
+        <button class="exit-popup visible-exit" data-popup="support-div"></button>
         <div class="display-none" id="support-div">
             <h1 class="content">Kontakt informationer</h1>
             <p class="content">Telefon: +45xxxxxxxx</p>
