--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <script defer src="indexscript.js"></script>
 </head>
 <body>
-    <div class="main-container">
-        <div id="page2">
+    <div class="page-container">
+        <div class="main-container">
             <img src="logo.png">
             <h1>Velkommen til Jensens boligselvskab</h1>
             <p>Log ind eller <a class="dark-blue" href="resetPassword.html">glemt kodeord</a></p>
-            <div id="textboxContainer">
+            <div class="textbox-container">
                 <input type="text" id="username" placeholder="Brugernavn" autofocus>
-                <div></div>
-                <input type="text" id="password" placeholder="Kodeord" style="margin-top: 10px;">
+                <input type="password" id="password" placeholder="Kodeord">
             </div>
-            <button id="loginBtn" class="navBtn" style="margin-top: 10px;">Log ind</button>
+            <button id="loginBtn" class="navBtn">Log ind</button>
         </div>
     </div>
 </body>
