--- a/main.html
+++ b/main.html
@@ -3,7 +3,9 @@
 <head>
     <title>Deløkonomi</title>
     <link rel="stylesheet" href="mainstyle.css">
-    <script defer src="mainscript.js"></script>
+    <script type="module" src="mainscript.js"></script>
+    <script type="module" src="generateCalendar.js"></script>
+    <script type="module" src="calendarObject.js"></script>
 </head>
 <body>
     <div class="hidden-popup-div">
