making cancel button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="main-container">
         <div id="page2">
             <img src="logo.png">
-            <h1>Velkommen til Jensens boligselvskab</h1>
+            <h1>Velkommen til Jensens boligselskab</h1>
             <p>Log ind eller <a class="dark-blue" href="resetPassword.html">glemt kodeord</a></p>
             <div id="textboxContainer">
                 <input type="text" id="username" placeholder="Brugernavn" autofocus>
