--- a/main.html
+++ b/main.html
@@ -75,12 +75,16 @@
             </div>
         </div>
         <div class="display-none" id="order-div">
-            <h1 >im adding times</h1>
+            <h1>im adding times</h1>
             <div id="display-ordered-times"></div>
             <button class="confirm-btn" id="confirm-btn-id">Bekræft tider</button>
         </div>
+        <div class="display-none" id ="cancel-div">
+            <h1>AFLYS DET HELE</h1>
+            <div id="display-cancelled-times"></div>
+        </div>
     </div>
-    <div class="exit-popup invisible-exit"></div> 
+    <div class="exit-popup invisible-exit"></div>
     <div class="can-blur">
         <div class="nav">
             <img src="logo.png">
@@ -88,6 +92,7 @@
             <button class="nav-btn" id="settings-btn">Settings</button>
             <button class="nav-btn" id="feedback-btn">Feedback</button>
             <button class="nav-btn" id="support-btn">Support</button>
+            <button class="nav-btn" id="cancel-btn">Aflys tider</button>
             <button class="nav-btn" id="logout-btn">Log ud</button>
         </div>
         <div class="calendar-grid" id="cal-start"></div>
