--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
         <button class="exit-popup visible-exit" data-popup="budget-div">X</button>
         <div class="display-none" id="budget-div">
             <h1 class="content">Saldo</h1>
-            <h3 class="content">Her får du overblik over dit forbrug</h3>
+            <h3 class="content">Her får du overblik over dit forbrug:</h3>
 
     
             <label class="content" for="monthly-budget">Månedligt budget:</label>
             <input type="number" id="monthly-budget" placeholder="Indtast beløb">
-            <button onclick="setBudget()">Indstil</button>
+            <button class="content" onclick="setBudget()">Indstil</button>
             <span id="check-mark" style="display:none;">✔️</span>
 
             <h4 class="content">Nuværende saldo: <span id="current-balance">230</span> DKK</h4>
@@ -33,7 +33,7 @@
                     <span id="current-year"></span>
                     <button id="next-month-btn" class="content" onclick="næsteMåned()">&#9654;</button>
                 </div>
-                <textarea rows="4" cols="50" class="content">Vaskemaskine 50 kr. Tøretumbler 8 kr.</textarea>
+                <textarea rows="4" cols="50" class="content">2/05/2024: Vaskemaskine 16 kr.  3/05/2024: Tøretumbler 8 kr. 9/05/2024: Vaskemaskine 8 kr. Tøretumbler 16 kr. 16/05/2024: Vaskemaskine 16 kr. 21/05/2024: Tøretumbler 8 kr.</textarea>
             </div>
         </div>  
           
