--- a/main.html
+++ b/main.html
@@ -19,9 +19,9 @@
             <button class="content" onclick="setBudget()">Indstil</button>
             <span id="check-mark" style="display:none;">✔️</span>
 
-            <h4 class="content">Nuværende saldo: <span id="current-balance">230</span> DKK</h4>
-            <h4 class="content">Sidste periode: <span id="last-period">180</span> DKK</h4>
-            <h4 class="content">Overskridelse: <span id= overskridelse>-30</span> DKK</h4>
+            <h4 class="content">Nuværende saldo: <span id="current-balance">72</span> Kr.</h4>
+            <h4 class="content">Sidste periode: <span id="last-period">110</span> Kr.</h4>
+            <h4 class="content">Overskridelse: <span id= overskridelse>-30</span> Kr.</h4>
 
     
             <button class="content" onclick="showHistory()">Se din historik</button>
@@ -33,7 +33,7 @@
                     <span id="current-year"></span>
                     <button id="next-month-btn" class="content" onclick="næsteMåned()">&#9654;</button>
                 </div>
-                <textarea rows="4" cols="50" class="content">2/05/2024: Vaskemaskine 16 kr.  3/05/2024: Tøretumbler 8 kr. 9/05/2024: Vaskemaskine 8 kr. Tøretumbler 16 kr. 16/05/2024: Vaskemaskine 16 kr. 21/05/2024: Tøretumbler 8 kr.</textarea>
+                <textarea rows="3" cols="50" class="content">2/05/2024: Vaskemaskine 16 kr.  3/05/2024: Tøretumbler 8 kr. 9/05/2024: Vaskemaskine 8 kr. Tøretumbler 16 kr. 16/05/2024: Vaskemaskine 16 kr. 21/05/2024: Tøretumbler 8 kr.</textarea>
             </div>
         </div>  
           
