--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <div class="main-container">
             <img src="logo.png">
             <h1>Velkommen til Jensens boligselvskab</h1>
-            <p>Log ind eller <a class="dark-blue" href="resetPassword.html">glemt kodeord</a></p>
+            <p>Har du glemt adgangskoden? <a class="dark-blue" href="resetPassword.html">Klik her</a></p>
             <div class="textbox-container">
                 <input type="text" id="username" placeholder="Brugernavn" autofocus>
-                <input type="password" id="password" placeholder="Kodeord">
+                <input type="password" id="password" placeholder="Adgangskode">
             </div>
             <button id="loginBtn" class="navBtn">Log ind</button>
         </div>
