--- a/resetpassword.html
+++ b/resetpassword.html
@@ -24,6 +24,8 @@
             color: #ffffff;
             text-decoration: none;
             transition: background-color 0.3s;
+            width: 470px;
+            text-align: center;
         }
 
         .reset-password-btn:hover {
