--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
             <h3 class="content">Her får du overblik over dit forbrug</h3>
 
             <!-- månedligt budget -->
-            <label class="content" for="monthly-budget">Månedligt budget:</label>
+            <label for="monthly-budget">Månedligt budget:</label>
             <input type="number" id="monthly-budget" placeholder="Indtast beløb">
             <button onclick="setBudget()">Indstil</button>
             <h4 class="content">Nuværende saldo: <span id="current-balance">0</span> DKK</h4>
@@ -22,7 +22,7 @@
             <h4 class="content">Overskridelse: <span id= overskridelse>0</span> DKK</h4>
 
             <!--Forbrugshistorik -->
-            <button class="content" onclick="showHistory()">Se din historik</button>
+            <button class="content history-button" onclick="showHistory()">Se din historik</button>
             <ul id="history"></ul>
             <div id="history-popup" class="history-popup">
                 <h3 id="current-month" class="content">Januar</h3>               
