--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
             <span id="check-mark" style="display:none;">✔️</span>
 
             <h4 class="content">Nuværende saldo: <span id="current-balance">72</span> Kr.</h4>
-            <h4 class="content">Sidste periode: <span id="last-period">110</span> Kr.</h4>
-            <h4 class="content">Overskridelse: <span id= overskridelse>-30</span> Kr.</h4>
+            <h4 class="content">Sidste måned: <span id="last-period">110</span> Kr.</h4>
+            <h4 class="content">Denne måneds overskridelse: <span id= overskridelse>30</span> Kr.</h4>
 
     
             <button class="content" onclick="showHistory()">Se din historik</button>
@@ -33,7 +33,11 @@
                     <span id="current-year"></span>
                     <button id="next-month-btn" class="content" onclick="næsteMåned()">&#9654;</button>
                 </div>
-                <textarea rows="3" cols="50" class="content">2/05/2024: Vaskemaskine 16 kr.  3/05/2024: Tøretumbler 8 kr. 9/05/2024: Vaskemaskine 8 kr. Tøretumbler 16 kr. 16/05/2024: Vaskemaskine 16 kr. 21/05/2024: Tøretumbler 8 kr.</textarea>
+                <textarea rows="6,1" cols="50" class="content">2/05/2024: Vaskemaskine: 16 kr. 
+3/05/2024: Tøretumbler: 8 kr. 
+9/05/2024: Vaskemaskine: 8 kr. & Tøretumbler: 16 kr. 
+16/05/2024: Vaskemaskine: 16 kr. 
+21/05/2024: Tøretumbler: 8 kr.</textarea>
             </div>
         </div>  
           
