--- a/main.html
+++ b/main.html
@@ -67,11 +67,11 @@
 
         <button class="exit-popup visible-exit" data-popup="support-div"></button>
         <div class="display-none" id="support-div">
-            <h1 class="content">Kontakt informationer</h1>
+            <h1 class="content">Kontaktinformationer</h1>
             <p class="content">Telefon: +45xxxxxxxx</p>
             <p class="content">Email: <a href="mailto:Jensenboligselskabsupport@gmail.com">Jensenboligselskabsupport@gmail.com</a></p>
             <p class="content">Adresse: xxxxxxxxxxxxx</p>
-            <p class="content" id="Skriv-til-visevaerter">Skriv til vicevært</p>
+            <p class="content" id="Skriv-til-visevaerter">Skriv til vicevært direkte:</p>
             <textarea class="content" id="message-box2" rows="6,1" cols="50" placeholder="Skriv til vicevært her" ></textarea>
             <div class="content">
                 <button class="send-btn" onclick="sendFeedback()">Send</button>
