everything works, except dates

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 <body>
     <div class="hidden-popup-div">
         <button class="exit-popup"></button>
-        <button class="exit-popup visible-exit" data-popup="budget-div"></button>
+        <button class="exit-popup " data-popup="budget-div"></button>
         <div class="display-none" id="budget-div">
             <h1 class="content">Saldo</h1>
             <h3 class="content">Her får du overblik over dit forbrug:</h3>
@@ -37,10 +37,10 @@
 21/05/2024: Tøretumbler: 8 kr.</textarea>
             </div>
         </div>
-        <button class="exit-popup visible-exit" data-popup="settings-div"></button>
+        <button class="exit-popup " data-popup="settings-div"></button>
         <div class="display-none" id="settings-div">Settings div</div>
     
-        <button class="exit-popup visible-exit" data-popup="feedback-div"></button>
+        <button class="exit-popup " data-popup="feedback-div"></button>
         <div class="display-none" id="feedback-div">
             <h1 class="content">Feedback</h1> 
             <p class="content">Skriv din feedback nedenunder</p>
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        <button class="exit-popup visible-exit" data-popup="support-div"></button>
+        <button class="exit-popup " data-popup="support-div"></button>
         <div class="display-none" id="support-div">
             <h1 class="content">Kontakt informationer</h1>
             <p class="content">Telefon: +45xxxxxxxx</p>
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="display-none" id="order-div">
-            <h1>im adding times</h1>
+            <h1>Se og aflys tider</h1>
             <div id="display-ordered-times"></div>
             <button class="confirm-btn" id="confirm-btn-id">Bekræft tider</button>
         </div>
@@ -111,6 +111,12 @@
             <button class="shared-items-btn" id="vacumn-cleaner-btn">Støvsuger</button>
             <div class="shared-items-selected"></div>
         </div>
+        <!-- <div class="shared-items-img-container">
+            <img src="washingmachine.png" class ="shared-items-img">
+            <img src="party.png" class ="shared-items-img">
+            <img src="drill.png" class ="shared-items-img">
+            <img src="vacuum.png" class ="shared-items-img">
+        </div> -->
     </div>
 </body>
 </html>
