--- a/main.html
+++ b/main.html
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="display-none" id="order-div">
-            <h1>Se og aflys tider</h1>
+            <h1>Tilføj tider</h1>
             <div id="display-ordered-times"></div>
             <button class="confirm-btn" id="confirm-btn-id">Bekræft tider</button>
         </div>
