cancelTimes is fully functional now

--- a/main.html
+++ b/main.html
@@ -127,25 +127,25 @@
             <div class="container-right">
                 <div class="shared-items-btn" id="washing-machine-btn">
                     <div class="washing-container, button-inner">
-                        <h2>Washing Machine</h2>
+                        <h2>Vaskerum</h2>
                         <img src="IMAGES/washingmachine.png" alt="">
                     </div>
                 </div>
                 <div class="shared-items-btn" id="party-room-btn">
                     <div class="party-container, button-inner">
-                        <h2>Party Room</h2>
+                        <h2>Festlokale</h2>
                         <img src="IMAGES/party.png" alt="" sizes="" srcset="">
                     </div>
                 </div>
                 <div class="shared-items-btn" id="drill-btn">
                     <div class="drill-container, button-inner">
-                        <h2>Drill</h2>
+                        <h2>Boremaskine</h2>
                         <img src="IMAGES/drill.png" alt="" srcset="">
                     </div>
                 </div>
                 <div class="shared-items-btn" id="vacumn-cleaner-btn">
                     <div class="vacuum-container, button-inner">
-                        <h2>Vacuum Cleaner</h2>
+                        <h2>Støvsuger</h2>
                         <img src="IMAGES/vacuum.png" alt="">
                     </div>
                 </div>
